Implement & test agent communication with RoundRobinGroupChat using llama3.2:3b

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,8 @@ feedparser>=6.0.11
 requests>=2.31.0
 django-cors-headers>=4.3.1
 pyautogen>=0.4.0  # Python 3.13+ compatible version
+autogen-ext[openai]>=0.7.5  # OpenAI-compatible model client for Ollama
 pydantic>=2.0.0
-ollama>=0.1.0
+ollama>=0.1.0  # Optional: for direct Ollama API access (not required for AutoGen)
 boto3>=1.34.0
 supabase>=2.0.0
