--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -10,3 +10,8 @@ python-dotenv==1.0.0
 feedparser==6.0.11
 requests==2.31.0
 django-cors-headers==4.3.1
+youtube-search-python==1.6.6
+newspaper3k==0.2.8
+wikipedia==1.4.0
+beautifulsoup4==4.14.2
+tqdm==4.67.1
