--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,6 @@ pydantic>=2.0.0
 ollama>=0.1.0  # Optional: for direct Ollama API access (not required for AutoGen)
 boto3>=1.34.0
 supabase>=2.0.0
+channels>=4.0.0
+channels-redis>=4.1.0
+daphne>=4.0.0
